--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+$primary: #ff550b;
+$secondary: #303030;
+$success: #015668;
+$danger: #ff304f;
+$info: #0f81c7;
+$warning: #0de2ea;
+$light: #828bb2;
+$dark: #000000;
+$enable-gradients: true;
+$spacer: 1rem;
+$border-width: 1px;
+$btn-border-radius: 0.25rem;
+@import "../node_modules/bootstrap/scss/bootstrap.scss";
+@import "../node_modules/@fortawesome/fontawesome-free/css/all.css";
+
+// Add SASS theme customizations here..
