--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -1,33 +1,4 @@
-<div class="backgroud-img">
-  <div class="container-xl layout1">
-    <app-navbar></app-navbar>
-    <div class="slide row my-auto">
-      <div class="col-6">
-        <h1 class="text-capitalize">Nike new collection</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation.
-        </p>
-        <div class="row">
-          <div class="col-1">
-            <i class="fas fa-plus add-icon bg-primary"></i>
-          </div>
-          <div class="col-3 ml-4 my-auto">Add to bag</div>
-        </div>
-      </div>
-      <div class="col-6">
-        <img
-          class="img-slide"
-          src="../../../../assets/img/xbanner-img.png.pagespeed.ic.xt3MuruiIf.webp"
-          alt=""
-        />
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="container-xl mx-auto margin-100">
+<div>
   <!-- layout2 -->
   <div class="container-xl row mx-auto text-center margin-100">
     <div class="col-3">
@@ -75,104 +46,5 @@
       <img src="../../../../assets/img/layout-3-img-5.webp" alt="" />
     </div>
   </div>
-  <!-- layout-4 -->
-  <div class="product">
-    <div class="head-product">
-      <div class="row">
-        <div class="col-4">
-          <img
-            src="../../../../assets/img/prev.png.webp"
-            alt=""
-            class="float-right btn-prev"
-          />
-        </div>
-        <div class="col-4 text-center">
-          <h3 class="text-capitalize">latest products</h3>
-        </div>
-        <div class="col-4">
-          <img
-            src="../../../../assets/img/next.png.webp"
-            alt=""
-            class="btn-prev"
-          />
-        </div>
-      </div>
-      <p class="text-center w-50 mx-auto my-4">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua.
-      </p>
-    </div>
-    <div class="product row" *ngIf="products">
-      <div class="col-3 px-3" *ngFor="let item of products">
-        <img [src]="item.images_list[0]" alt="" class="imgproduct" />
-        <h6 class="text-uppercase mt-5">{{ item.brand }}</h6>
-        <div class="price text-secondary font-weight-bold">
-          <span>{{ item.price }}</span>
-          <span *ngIf="!item.price">£161.63 - £202.04</span>
-        </div>
-        <div class="icon-product my-4">
-          <i class="fas fa-briefcase mx-2 rounded-circle bg-light"></i>
-          <i class="fas fa-heart mx-2 rounded-circle bg-light"></i>
-          <i class="fas fa-info mx-2 rounded-circle bg-light"></i>
-        </div>
-      </div>
-      <!-- <div class="col-3 px-3">
-        <img
-          src="../../../../assets/img/xp6.jpg.pagespeed.ic.h0LeOyIbLA.webp"
-          alt=""
-        />
-        <h6 class="text-uppercase mt-5">
-          addidas New Hammer sole for Sports person
-        </h6>
-        <div class="price text-secondary font-weight-bold">
-          <span>{{ price1 | currency: "USD" }}</span>
-          <span class="pl-4 cost">{{ price2 | currency: "USD" }}</span>
-        </div>
-        <div class="icon-product my-4">
-          <i class="fas fa-briefcase mx-2 rounded-circle"></i>
-          <i class="fas fa-heart mx-2 rounded-circle"></i>
-          <i class="fas fa-info mx-2 rounded-circle"></i>
-        </div>
-      </div>
-      <div class="col-3 px-3">
-        <img
-          src="../../../../assets/img/xp6.jpg.pagespeed.ic.h0LeOyIbLA.webp"
-          alt=""
-        />
-        <h6 class="text-uppercase mt-5">
-          addidas New Hammer sole for Sports person
-        </h6>
-        <div class="price text-secondary font-weight-bold">
-          <span>{{ price1 | currency: "USD" }}</span>
-          <span class="pl-4 cost">{{ price2 | currency: "USD" }}</span>
-        </div>
-        <div class="icon-product my-4">
-          <i class="fas fa-briefcase mx-2 rounded-circle"></i>
-          <i class="fas fa-heart mx-2 rounded-circle"></i>
-          <i class="fas fa-info mx-2 rounded-circle"></i>
-        </div>
-      </div>
-      <div class="col-3 px-3">
-        <img
-          src="https://m.media-amazon.com/images/I/51bLpccQMkL.jpg"
-          alt=""
-          width="100%"
-          height="300px"
-          style="object-fit: contain"
-        />
-        <h6 class="text-uppercase mt-5">
-          addidas New Hammer sole for Sports person
-        </h6>
-        <div class="price text-secondary font-weight-bold">
-          <span>{{ price1 | currency: "USD" }}</span>
-          <span class="pl-4 cost">{{ price2 | currency: "USD" }}</span>
-        </div>
-        <div class="icon-product my-4">
-          <i class="fas fa-briefcase mx-2 rounded-circle"></i>
-          <i class="fas fa-heart mx-2 rounded-circle"></i>
-          <i class="fas fa-info mx-2 rounded-circle"></i>
-        </div>
-      </div> -->
-    </div>
-  </div>
+  <app-shoes-container></app-shoes-container>
 </div>
