--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
-$primary: #ff550b;
-$secondary: #303030;
+$primary: #f87a26;
+$secondary: #222222;
 $success: #015668;
 $danger: #ff304f;
 $info: #0f81c7;
@@ -10,7 +10,10 @@ $enable-gradients: true;
 $spacer: 1rem;
 $border-width: 1px;
 $btn-border-radius: 0.25rem;
+@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap");
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 @import "../node_modules/@fortawesome/fontawesome-free/css/all.css";
-
+* {
+  font-family: "Plus Jakarta Sans", sans-serif;
+}
 // Add SASS theme customizations here..
