implement login layout

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -79,7 +79,7 @@
     <p class="text-muted text-center my-5">
       Copyright &#169;2022 All rights reserved | This template is made with
       <i class="fas fa-heart text-primary"></i> by
-      <span class="text-primary">Colorlibdvdvdtrtr</span>
+      <span class="text-primary">NgaHT10</span>
     </p>
   </div>
 </div>
