--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="signin-container d-flex align-items-center">
+<div class="row">
+  <div class="col signin-container d-flex align-items-center">
     <div class="container mx-auto text-center text-white sign-in">
       <h3>New to our website?</h3>
       <p>
@@ -9,6 +9,54 @@
       <button class="bg-primary px-4 py-2 border-0 text-white font-weight-bold">
         {{ "Create an account" | uppercase }}
       </button>
+    </div>
+  </div>
+  <div class="col d-flex align-items-center px-3">
+    <div class="mx-auto w-100 text-center">
+      <h5 class="mb-4">{{ "Log in to enter" | uppercase }}</h5>
+      <form>
+        <mat-form-field class="w-75 mt-2">
+          <mat-label>User Name</mat-label>
+          <input matInput type="text" />
+        </mat-form-field>
+        <mat-form-field class="w-75 mt-2">
+          <mat-label>Password</mat-label>
+          <input matInput placeholder="password" type="password" />
+        </mat-form-field>
+        <div class="form-group form-check mt-2">
+          <input type="checkbox" class="form-check-input mr-2" />
+          <label class="form-check-label">Keep me log in</label>
+        </div>
+        <button
+          class="bg-primary px-4 py-2 border-0 text-white font-weight-bold w-75 mt-2"
+        >
+          Log In
+        </button>
+      </form>
+
+      <!-- <form class="example-form">
+      <mat-form-field class="example-full-width">
+        <mat-label>Email</mat-label>
+        <input
+          matInput
+          [formControl]="emailFormControl"
+          [errorStateMatcher]="matcher"
+          placeholder="Ex. pat@example.com"
+        />
+        <mat-hint>Errors appear instantly!</mat-hint>
+        <mat-error
+          *ngIf="
+            emailFormControl.hasError('email') &&
+            !emailFormControl.hasError('required')
+          "
+        >
+          Please enter a valid email address
+        </mat-error>
+        <mat-error *ngIf="emailFormControl.hasError('required')">
+          Email is <strong>required</strong>
+        </mat-error>
+      </mat-form-field>
+    </form> -->
     </div>
   </div>
 </div>
