--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,5 +1,6 @@
 .signin-container {
-  background-image: url("../../../assets/img/xlogin.jpg.pagespeed.ic.zfMN09dS8Y.webp");
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("../../../assets/img/xlogin.jpg.pagespeed.ic.zfMN09dS8Y.webp");
   background-repeat: no-repeat;
   background-size: cover;
   height: 700px;
