implement contact layout

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -11,7 +11,7 @@
       </button>
     </div>
   </div>
-  <div class="col d-flex align-items-center px-3">
+  <div class="col d-flex align-items-center px-3 shadow">
     <div class="mx-auto w-100 text-center">
       <h5 class="mb-4">{{ "Log in to enter" | uppercase }}</h5>
       <form>
