--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
           </p>
           <div class="row">
             <div class="col-1">
-              <i class="fas fa-plus add-icon bg-primary"></i>
+              <i class="fas fa-plus add-icon bg-gradient-warning"></i>
             </div>
             <div class="col-3 ml-4 my-auto">Add to bag</div>
           </div>
