--- a/src/app/components/shoe-category/shoe-category.component.html
+++ b/src/app/components/shoe-category/shoe-category.component.html
@@ -7,7 +7,7 @@
   <div class="col-9">
     <div class="row bg-light"></div>
     <div class="row">
-      <app-shoe-preview></app-shoe-preview>
+      <app-shoe-preview [numberCharater]="30"></app-shoe-preview>
     </div>
   </div>
 </div>
