--- a/src/app/components/product-detail/product-detail.component.html
+++ b/src/app/components/product-detail/product-detail.component.html
@@ -25,6 +25,7 @@
       <div class="my-3" id="icon-product">
         <button class="btn btn-primary text-uppercase px-4">add to card</button>
         <i class="fas fa-heart mx-2 rounded-circle"></i>
+        <p>test</p>
       </div>
     </div>
   </div>
