--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -18,8 +18,8 @@
             placeholder="Enter email ..."
           />
           <div class="input-group-prepend">
-            <div class="input-group-text rounded-right">
-              <i class="fas fa-arrow-right"></i>
+            <div class="input-group-text rounded-right gradient">
+              <i class="fas fa-arrow-right text-white"></i>
             </div>
           </div>
         </div>
