--- a/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/components/shopping-cart/shopping-cart.component.html
@@ -30,7 +30,7 @@
     <tr>
       <td>
         <button
-          class="bg-secondary px-5 py-2 border-0 text-white font-weight-bold"
+          class="btn btn-secondary rounded-0 px-5 text-white font-weight-bold"
         >
           UPDATE CART
         </button>
@@ -43,7 +43,7 @@
             placeholder="Enter Coupon"
           />
           <button
-            class="bg-primary px-5 py-2 border-0 text-white font-weight-bold"
+            class="btn btn-primary gradient px-5 rounded-0 text-white font-weight-bold"
           >
             Apply
           </button>
@@ -108,12 +108,12 @@
       <td colspan="3">
         <div class="d-flex align-items-center">
           <button
-            class="bg-secondary px-5 py-2 border-0 text-white font-weight-bold"
+            class="btn btn-secondary px-5 rounded-0 text-white font-weight-bold"
           >
             CONTINUE SHOPPING
           </button>
           <button
-            class="bg-primary px-5 py-2 border-0 text-white font-weight-bold"
+            class="btn btn-primary gradient px-5 rounded-0 text-white font-weight-bold"
           >
             CHECKOUT
           </button>
