--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@ $danger: #ff304f;
 $info: #0f81c7;
 
 $warning: #ffae00;
-$light: #828bb2;
+$light: #e8f0f2;
 
 $dark: #000000;
 $enable-gradients: true;
@@ -32,4 +32,6 @@ body {
 .w-15 {
   width: 15%;
 }
-
+.gradient {
+  background-image: linear-gradient(90deg, #ffba00 0%, #ff6c00 100%);
+}
