--- a/src/app/components/product-detail/product-detail.component.html
+++ b/src/app/components/product-detail/product-detail.component.html
@@ -1,4 +1,4 @@
-<div class="container-xl">
+<div class="container-xl" *ngIf="detailProduct">
   <div class="detail-product row">
     <div class="col-6 p-5">
       <img
