--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,3 +29,12 @@ body {
 .w-15 {
   width: 15%;
 }
+.mt-50 {
+  margin-top: 50px;
+}
+.backgroud-img {
+  background-image: url("./assets/img/backgroup.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 50px 0px;
+}
