--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,33 +1,8 @@
 <div class="app-container">
-  <div class="backgroud-img">
-    <div class="container-xl layout1">
-      <app-navbar></app-navbar>
-      <div class="slide row my-auto">
-        <div class="col-6">
-          <h1 class="text-capitalize">Nike new collection</h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation.
-          </p>
-          <div class="row">
-            <div class="col-1">
-              <i class="fas fa-plus add-icon bg-gradient-warning"></i>
-            </div>
-            <div class="col-3 ml-4 my-auto">Add to bag</div>
-          </div>
-        </div>
-        <div class="col-6">
-          <img
-            class="img-slide"
-            src="../../../../assets/img/xbanner-img.png.pagespeed.ic.xt3MuruiIf.webp"
-            alt=""
-          />
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="content-container container-xl mx-auto margin-100">
+  <app-navbar class="nav-container"></app-navbar>
+  <div class="content-container mx-auto margin-100">
+    <div></div>
+
     <router-outlet></router-outlet>
   </div>
   <app-footer></app-footer>
