--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -1,4 +1,34 @@
 <div>
+  <!-- background-img -->
+  <div class="backgroud-img" style="height: 100vh">
+    <div class="layout1 container-xl">
+      <div class="slide row my-auto">
+        <div class="col-6">
+          <h1 class="text-capitalize">Nike new collection</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation.
+          </p>
+          <div class="row">
+            <div class="col-1">
+              <i class="fas fa-plus add-icon bg-gradient-warning"></i>
+            </div>
+            <div class="col-3 ml-4 my-auto">Add to bag</div>
+          </div>
+        </div>
+        <div class="col-6">
+          <img
+            class="img-slide"
+            src="../../../../assets/img/xbanner-img.png.pagespeed.ic.xt3MuruiIf.webp"
+            alt=""
+          />
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container-xl">
   <!-- layout2 -->
   <div class="container-xl row mx-auto text-center margin-100">
     <div class="col-3">
