--- a/src/app/components/shoe-category/shoe-category.component.html
+++ b/src/app/components/shoe-category/shoe-category.component.html
@@ -1,13 +1,48 @@
-<div class="row">
+<div class="backgroud-img" style="height: 40vh"></div>
+<div class="row container-xl mx-auto mt-5">
   <div class="col-3">
     <div class="row bg-light p-4 align-items-center">
       <h5 class="text-white m-0 p-0">Browse Categories</h5>
     </div>
   </div>
-  <div class="col-9">
-    <div class="row bg-light"></div>
-    <div class="row">
-      <app-shoe-preview [numberCharater]="30"></app-shoe-preview>
+  <div class="col-9 pl-5">
+    <!-- nav-catagory -->
+    <div class="row bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="collapse navbar-collapse" id="nav-bar">
+          <ul class="navbar-nav ml-auto">
+            <select
+              class="form-select border rounded mb-5 border-primary"
+              aria-label="Default select example"
+              (change)="sort($event.target.value)"
+            >
+              <option selected>12</option>
+              <option *ngFor="let i of shows">{{ i }}</option>
+            </select>
+          </ul>
+        </div>
+      </nav>
     </div>
+    <!-- show product -->
+    <div class="row">
+      <div class="col-4" *ngFor="let item of products">
+        <app-shoe-preview
+          [numberCharater]="40"
+          [product]="item"
+        ></app-shoe-preview>
+      </div>
+    </div>
+    <!-- paging -->
+    <nav aria-label="Page navigation example">
+      <ul class="pagination">
+        <li class="page-item">
+          <span class="page-link"></span>
+        </li>
+        <li class="page-item" *ngFor="let page of pages">
+          <span class="page-link">{{ page }}</span>
+        </li>
+        <li class="page-item"><span class="page-link" href="#">Next</span></li>
+      </ul>
+    </nav>
   </div>
 </div>
