--- a/src/app/components/shoes-container/shoes-container.component.html
+++ b/src/app/components/shoes-container/shoes-container.component.html
@@ -1,7 +1,3 @@
-<!-- layout-4 -->
-<!-- <div class="content-container">
-      <router-outlet></router-outlet>
-    </div> -->
 <div class="product">
   <div class="head-product">
     <div class="row">
@@ -29,4 +25,8 @@
     </p>
   </div>
 </div>
-<app-shoe-preview [numberCharater]="'40'"></app-shoe-preview>
+<div class="row">
+  <div class="col-3" *ngFor="let item of products">
+    <app-shoe-preview [numberCharater]="40" [product]="item"></app-shoe-preview>
+  </div>
+</div>
