--- a/src/app/components/shoe-category/shoe-category.component.html
+++ b/src/app/components/shoe-category/shoe-category.component.html
@@ -1,27 +1,45 @@
 <div class="backgroud-img" style="height: 40vh"></div>
 <div class="row container-xl mx-auto mt-5">
-  <div class="col-3">
+  <div class="col-3 shadow">
     <div class="row bg-light p-4 align-items-center">
-      <h5 class="text-white m-0 p-0">Browse Categories</h5>
+      <h5 class="text-white m-0 p-0">Product Fillters</h5>
+    </div>
+    <div class="form-check p-3">
+      <div *ngFor="let item of productService.categories">
+        <div *ngIf="item.quantity > 10" class="mb-3 border-bottom p-2">
+          <p
+            id="category"
+            for="exampleRadios1"
+            (click)="handleChange(item.category)"
+          >
+            {{ item.category }}
+            <span style="opacity: 0.6">({{ item.quantity }})</span>
+          </p>
+          <!-- <input
+            class="form-check-input"
+            type="radio"
+            (change)="handleChange($event)"
+            [value]="item.category"
+            name="exampleRadios"
+          />
+          <label class="category" for="exampleRadios1">
+            {{ item.category }} ({{ item.quantity }})
+          </label> -->
+        </div>
+      </div>
     </div>
   </div>
   <div class="col-9 pl-5">
     <!-- nav-catagory -->
-    <div class="row bg-light">
-      <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="collapse navbar-collapse" id="nav-bar">
-          <ul class="navbar-nav ml-auto">
-            <select
-              class="form-select border rounded mb-5 border-primary"
-              aria-label="Default select example"
-              (change)="sort($event.target.value)"
-            >
-              <option selected>12</option>
-              <option *ngFor="let i of shows">{{ i }}</option>
-            </select>
-          </ul>
-        </div>
-      </nav>
+    <div class="row bg-light p-3">
+      <select
+        class="form-select w-15 p-2"
+        aria-label="Default select example"
+        (change)="sort($event.target.value)"
+      >
+        <option selected>12</option>
+        <option *ngFor="let i of shows">{{ i }}</option>
+      </select>
     </div>
     <!-- show product -->
     <div class="row">
@@ -45,4 +63,5 @@
       </ul>
     </nav>
   </div>
+  <app-deal-week></app-deal-week>
 </div>
