--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@ $danger: #ff304f;
 $info: #0f81c7;
 
 $warning: #ffae00;
-$light: #e8f0f2;
+$light: #828bb3;
 
 $dark: #000000;
 $enable-gradients: true;
@@ -32,9 +32,14 @@ body {
 .w-15 {
   width: 15%;
 }
-
+.w-10 {
+  width: 10%;
+}
 .mt-50 {
   margin-top: 50px;
+}
+.my-50 {
+  margin: 50px 0px;
 }
 .backgroud-img {
   background-image: url("./assets/img/backgroup.webp");
@@ -42,5 +47,3 @@ body {
   background-size: cover;
   padding: 50px 0px;
 }
-
-
