--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -14,10 +14,16 @@
   <div class="col d-flex align-items-center px-3 shadow">
     <div class="mx-auto w-100 text-center">
       <h5 class="mb-4">{{ "Log in to enter" | uppercase }}</h5>
-      <form>
+      <form [formGroup]="loginForm">
         <mat-form-field class="w-75 mt-2">
-          <mat-label>User Name</mat-label>
-          <input matInput type="text" />
+          <mat-label>Email Address</mat-label>
+          <input
+            matInput
+            type="email"
+            formControlName="email"
+            (blur)="log()"
+            required
+          />
         </mat-form-field>
         <mat-form-field class="w-75 mt-2">
           <mat-label>Password</mat-label>
