--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@ $danger: #ff304f;
 $info: #0f81c7;
 
 $warning: #ffae00;
-$light: #828bb3;
+$light: #e8f0f2;
 
 $dark: #000000;
 $enable-gradients: true;
