--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,3 +46,6 @@ body {
   background-size: cover;
   padding: 50px 0px;
 }
+.gradient {
+  background-image: linear-gradient(90deg, #ffba00 0%, #ff6c00 100%);
+}
