--- a/src/app/components/shoes-container/shoe-preview/shoe-preview.component.html
+++ b/src/app/components/shoes-container/shoe-preview/shoe-preview.component.html
@@ -1,5 +1,5 @@
 <div class="px-3">
-  <div routerLink="/productDetail/{{ item.id }}">
+  <div routerLink="/productDetail/{{ item['id'] }}">
     <img [src]="item.images_list[0]" alt="" class="imgproduct" />
     <h6 class="text-uppercase mt-3" id="title1">
       {{ item.title | textcustom: numberCharater }}
