--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,3 +47,6 @@ body {
   background-size: cover;
   padding: 50px 0px;
 }
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
