--- a/src/app/components/home/home/home.component.scss
+++ b/src/app/components/home/home/home.component.scss
@@ -1,25 +1,19 @@
-.img-slide {
+#img-slide {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-.layout1 {
-  position: relative;
-  top: 0px;
-  left: 0px;
-  height: 100vh;
-}
+
 .add-icon {
   width: 2.6em;
   text-align: center;
   line-height: 2.6em;
   border-radius: 1.3em;
 }
-.slide {
-  position: absolute;
+.carousel-caption {
+  left: 30%;
   top: 50%;
-  transform: translate(0%, -50%);
-  margin: 50px;
+  transform: translate(-50%, -50%);
 }
 //layout2
 .margin-100 {
