--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,7 +5,6 @@
         <img src="../../../assets/img/brand.webp" />
       </a>
 
-
       <div class="collapse navbar-collapse" id="nav-bar">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
@@ -21,19 +20,25 @@
               >Shop</a
             >
           </li>
-          <li class="nav-item" (click)="showDropdownBlog = !showDropdownBlog">
-            <div class="dropdown">
+          <li class="nav-item" ngbDropdown>
+            <a href (click)="(false)" class="nav-link" ngbDropdownToggle
+              >Blog</a
+            >
+            <div ngbDropdownMenu id="drop-down">
+              <button ngbDropdownItem class="py-2">Blog</button>
+              <button ngbDropdownItem class="py-2">Blog Details</button>
+            </div>
+            <!-- <div class="dropdown">
               <button class="btn nav-link">Blog</button>
               <div
                 class="dropdown-menu show border-0 p-0"
                 id="drop-down"
                 [class.show]="showDropdownBlog"
               >
-
                 <p class="mt-3 mb-0 p-3 pl-4">Blog</p>
                 <p class="mb-0 p-3 pl-4" href="#">Blog Details</p>
               </div>
-            </div>
+            </div> -->
           </li>
           <li class="nav-item" routerLink="/contact">
             <a class="nav-link">contact</a>
