--- a/src/app/components/shoe-category/shoe-category.component.html
+++ b/src/app/components/shoe-category/shoe-category.component.html
@@ -15,16 +15,6 @@
             {{ item.category }}
             <span style="opacity: 0.6">({{ item.quantity }})</span>
           </p>
-          <!-- <input
-            class="form-check-input"
-            type="radio"
-            (change)="handleChange($event)"
-            [value]="item.category"
-            name="exampleRadios"
-          />
-          <label class="category" for="exampleRadios1">
-            {{ item.category }} ({{ item.quantity }})
-          </label> -->
         </div>
       </div>
     </div>
@@ -40,6 +30,15 @@
         <option selected>12</option>
         <option *ngFor="let i of shows">{{ i }}</option>
       </select>
+      <ngb-pagination
+        [directionLinks]="true"
+        [collectionSize]="productService.productList.length"
+        [(page)]="page"
+        [maxSize]="3"
+        [rotate]="true"
+        [pageSize]="show"
+        (pageChange)="next($event)"
+      ></ngb-pagination>
     </div>
     <!-- show product -->
     <div class="row">
@@ -51,17 +50,6 @@
       </div>
     </div>
     <!-- paging -->
-    <nav aria-label="Page navigation example">
-      <ul class="pagination">
-        <li class="page-item">
-          <span class="page-link"></span>
-        </li>
-        <li class="page-item" *ngFor="let page of pages">
-          <span class="page-link">{{ page }}</span>
-        </li>
-        <li class="page-item"><span class="page-link" href="#">Next</span></li>
-      </ul>
-    </nav>
   </div>
   <app-deal-week></app-deal-week>
 </div>
