--- a/src/app/components/home/home/home.component.scss
+++ b/src/app/components/home/home/home.component.scss
@@ -11,9 +11,12 @@
   border-radius: 1.3em;
 }
 .carousel-caption {
-  left: 30%;
+  left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+}
+.content-slide {
+  width: 60%;
 }
 //layout2
 .margin-100 {
