--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -16,7 +16,7 @@
       <h5 class="mb-4 text-center col-12">
         {{ "Log in to enter" | uppercase }}
       </h5>
-      <form [formGroup]="loginForm">
+      <form [formGroup]="loginForm" (ngSubmit)="onFormSubmit()">
         <div class="mx-auto w-75">
           <mat-form-field class="w-100 mt-2">
             <mat-label>Email Address</mat-label>
@@ -65,6 +65,7 @@
           </div>
           <button
             class="bg-primary gradient px-4 py-2 border-0 text-white w-100 mt-2 rounded"
+            [disabled]="loginForm.invalid"
           >
             Log In
           </button>
