--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -6,3 +6,8 @@
   height: 700px;
   width: 600px;
 }
+button:disabled,
+button[disabled] {
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    linear-gradient(90deg, #ffba00 0%, #ff6c00 100%);
+}
