--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,17 +6,18 @@
         There are advances being made in science and technology everyday, and a
         good example of this is the
       </p>
-      <button class="bg-primary px-4 py-2 border-0 text-white rounded">
-        {{ "Create an account" | uppercase }}
+      <button
+        class="bg-primary px-4 py-2 border-0 text-white rounded"
+        routerLink="/sigup"
+      >
+        {{ "SigUp" | uppercase }}
       </button>
     </div>
   </div>
   <div class="col d-flex align-items-center px-3 shadow">
-
     <div class="mx-auto w-100 text-center">
       <h5 class="mb-4">{{ "Log in to enter" | uppercase }}</h5>
       <form [formGroup]="loginForm">
-
         <mat-form-field class="w-75 mt-2">
           <mat-label>Email Address</mat-label>
           <input
