--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -39,7 +39,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#"
+            <a class="nav-link" routerLink="shopping-cart"
               ><i class="fas fa-shopping-cart"></i
             ></a>
           </li>
