--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -117,12 +117,17 @@
       <p>Free ship on all order</p>
     </div>
   </div>
-  <!-- layout3 -->
+  <!-- deals -->
   <div class="row flash-sale margin-100">
     <div class="col-9">
       <div class="row">
-        <div class="col-9">
+        <div class="col-9 single-deal">
           <img src="../../../../assets/img/layout-3-img1.webp" alt="" />
+          <a href="">
+            <div class="deal-details">
+              <h6 class="deal-title">Sneaks forsports</h6>
+            </div>
+          </a>
         </div>
         <div class="col-3">
           <img src="../../../../assets/img/layout-3-img-2.webp" alt="" />
