--- a/src/app/components/home/home/home.component.scss
+++ b/src/app/components/home/home/home.component.scss
@@ -25,7 +25,7 @@
 p i {
   font-size: 25px;
 }
-// layout3
+//deals
 .flash-sale img {
   width: 100%;
   height: 100%;
@@ -37,6 +37,30 @@ p i {
 .btn-prev:hover {
   cursor: pointer;
   opacity: 1;
+}
+//single deal
+.single-deal {
+  position: relative;
+  margin-bottom: 30px;
+}
+.deal-details {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  display: inline-block;
+  text-align: center;
+  transform: translate(-50%, -50%);
+  transition: all 0.3s ease 0s;
+}
+.deal-details a {
+  text-decoration: none;
+}
+.deal-title {
+  color: black;
+  text-transform: uppercase;
+}
+.single-deal:hover .deal-title {
+  color: black;
 }
 // product
 .cost {
